--- a/styles.css
+++ b/styles.css
@@ -93,13 +93,18 @@ li:hover{
     padding: 100px;
     margin:100px;
     width: 200px;
-    height:50px;
+    height:10px;
     background: rgba(255,255,255,1);
     border: 5px solid black;
-    border-radius:10%;
+    border-radius:15px;
 }
 
-
+.resumetitle{
+    position:relative;
+    bottom:60px;
+    right:85px;
+    width:400px;
+}
 
 .resume{
     float:right;
