--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,39 @@
-body{
-    font-family: "Helvetica,", Arial, Helvetica, sans-serif;
-    background-image: url("./images/grayback.webp");
+.homepage{
+    font-family: "Georgia";
+    background-image: url("./images/minimalist.jpeg");
     background-size: cover;
     margin:0;
     padding:0;
+}
+
+.aboutmepage{
+    font-family: "Georgia";
+    background-image: url("./images/minimalist.jpeg");
+    background-size: cover;
+    margin:0;
+    padding:0;
+}
+
+.resumepage{
+    font-family: "Georgia";
+    background-image: url("./images/minimalist.jpeg");
+    background-size: cover;
+    margin:0;
+    padding:0;
+}
+
+a:link{
+    color:white;
+    text-decoration:none;
+}
+
+a:visited{
+    color:white;
+}
+
+a:hover{
+    color:white;
+    text-decoration:underline;
 }
 
 ul{
@@ -13,14 +43,14 @@ ul{
     margin:0;
     height: 70px;
     padding:0;
-    background: rgb(46, 45, 45);
+    background: rgb(42, 40, 40);
     width:100%;
     top:0;
     overflow: hidden;
 }
 
 li{
-    float:left;
+    float:right;
     display: block;
     margin:10px;
     color:white;
@@ -34,7 +64,7 @@ li:hover{
 }
 
 .image{
-    height: 250px;
+    height: 150px;
     border-radius: 50%;
     border: 5px solid black;
     opacity: 1;
@@ -44,6 +74,8 @@ li:hover{
     position:relative;
     right:50px;
     bottom:100px;
+    font-size:15px;
+    line-height:1.5;
 }
 
 .title{
@@ -77,8 +109,10 @@ li:hover{
     background: rgba(255,255,255,1);
     margin:100px;
     font-size: 15px;
+    height:50px;
     border: 5px solid black;
     border-radius:10px;
+    overflow:scroll;
 }
 
 .headertext{
@@ -86,4 +120,12 @@ li:hover{
     width:600px;
     height:200px;
     text-align:left;
+}
+
+.middle{
+    position:absolute;
+    height:400px;
+    width:600px;
+    top:300px;
+    left:430px;
 }
