--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ a:visited{
 }
 
 a:hover{
-    color:white;
+    color: rgb(30, 104, 168);
     text-decoration:underline;
 }
 
@@ -49,7 +49,7 @@ ul{
     overflow: hidden;
 }
 
-li{
+.list{
     float:right;
     display: block;
     margin:10px;
@@ -57,10 +57,6 @@ li{
     text-align:center;
     padding: 14px 16px;
     text-decoration:none;
-}
-
-li:hover{
-    background-color: black;
 }
 
 .image{
@@ -103,4 +99,19 @@ li:hover{
     width:600px;
     top:275px;
     left:430px;
+}
+
+.logogroup{
+    float:left;
+    position:absolute;
+    left:50px;
+    top:320px;
+    list-style-type:none;
+}
+
+.logo{
+    height: 60px;
+    float:left;
+    clear:left;
+    padding:10px;
 }
