placed everything in cooresponding files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .homepage{
     font-family: "Georgia";
-    background-image: url("./images/minimalist.jpeg");
+    background-image: url("../images/minimalist.jpeg");
     background-size: cover;
     margin:0;
     padding:0;
@@ -8,7 +8,7 @@
 
 .aboutmepage{
     font-family: "Georgia";
-    background-image: url("./images/minimalist.jpeg");
+    background-image: url("../images/minimalist.jpeg");
     background-size: cover;
     margin:0;
     padding:0;
@@ -16,7 +16,7 @@
 
 .resumepage{
     font-family: "Georgia";
-    background-image: url("./images/minimalist.jpeg");
+    background-image: url("../images/minimalist.jpeg");
     background-size: cover;
     margin:0;
     padding:0;
