fixed background issue on aboutmepage

--- a/css/aboutmepage.css
+++ b/css/aboutmepage.css
@@ -1,6 +1,6 @@
 .aboutmepage{
     font-family: "Georgia";
-    background-image: url("./images/minimalist.jpeg");
+    background-image: url("../images/minimalist.jpeg");
     background-size: cover;
     margin:0;
     padding:0;
