--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,33 @@ ul{
     clear:left;
     padding:10px;
 }
+
+.dropbtn{
+    background: transparent;
+    float:right;
+    color:white;
+    margin:10px;
+    display: block;
+    padding: 16px;
+    border:none;
+    font-size:15px;
+}
+
+.dropdown{
+    float: right;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px;
+    z-index:99;
+}
+
+.dropdown-content a{
+    background: rgb(42, 40, 40);
+    padding: 12px 16px;
+    display:block;
+}
+
+.dropdown:hover .dropdown-content {display:block;}
